# slurm

./: README.rst  aclocal.m4  configure  configure.ac
scripts/: compile_and_install_slurm.sh  job.bash  job_install_test.bash  job_install_test_colocation.bash  job_nord3.bash  run_slurmd.bash
scripts/slurm_conf/: slurm.conf.template  users.sim
slurm/: slurm.h.in
src/common/: slurm_opt.h  slurm_protocol_pack.c
src/plugins/sched/: Makefile.am  Makefile.in
src/plugins/sched/backfill/: backfill.c
src/plugins/sched/colocation/: Makefile.am  Makefile.in  colocation.c  colocation.h  colocation_wrapper.c
src/plugins/sched/colocation/model/: degradation_model.py  linear_regression.sav  mlpregressor.sav  random_forest.sav  scaling.sav
src/plugins/sched/colocation/model/graph/: blossom_min.py  grafo.py
src/plugins/select/: Makefile.am
src/plugins/select/cons_res/: job_test.c  select_cons_res.c  select_cons_res.h
src/plugins/select/cons_tres/: job_test.c  select_cons_tres.c  select_cons_tres.h
src/plugins/select/linear_colocation/: Makefile.am  Makefile.in  select_linear_colocation.c
src/sbatch/: opt.c  sbatch.c
src/slurmctld/: controller.c  job_mgr.c  job_scheduler.c  slurmctld.h  srun_comm.c
src/srun/libsrun/: allocate.c  opt.c
